--- a/Case_Study_Group_14.Rmd
+++ b/Case_Study_Group_14.Rmd
@@ -7,22 +7,180 @@ output: html_document
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-## R Markdown
+```{r Loading and Installing Packages, echo=FALSE}
 
-This is an R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <http://rmarkdown.rstudio.com>.
-
-When you click the **Knit** button a document will be generated that includes both content as well as the output of any embedded R code chunks within the document. You can embed an R code chunk like this:
-
-```{r cars}
-summary(cars)
+if (!require(readr)) {
+  install.packages("readr")
+  require(readxl)
+}
+if (!require(dplyr)) {
+  install.packages("dplyr")
+  require(readxl)
+}
+if (!require(tidyr)) {
+  install.packages("tidyr")
+  require(readxl)
+}
+if (!require(purrr)) {
+  install.packages("purrr")
+  require(readxl)
+}
+if (!require(stringr)) {
+  install.packages("stringr")
+  require(readxl)
+}
+if (!require(rebus)) {
+  install.packages("rebus")
+  require(readxl)
+}
 ```
 
-## Including Plots
+```{r Importing Data, echo=FALSE}
 
-You can also embed plots, for example:
+Einzelteil_T21<-read_csv2("Data/Einzelteil/Einzelteil_T21.csv")%>% select(-X1, -X1_1) %>% rename(Produktionsdatum_Origin=Produktionsdatum_Origin_01011970)
 
-```{r pressure, echo=FALSE}
-plot(pressure)
+
+Einzelteil_T23<-read_csv2("Data/Einzelteil/Einzelteil_T23.csv")%>% select(-X1, -X1_1,-ID_T23.y,-Produktionsdatum.y,-Herstellernummer.y,-Werksnummer.y,-Fehlerhaft.y,-Fehlerhaft_Datum.y,-Fehlerhaft_Fahrleistung.y) %>% select(1,3,4,5,6,7,2) %>% rename(ID_T23=ID_T23.x,Herstellernummer=Herstellernummer.x,Werksnummer=Werksnummer.x,Fehlerhaft=Fehlerhaft.x,Fehlerhaft_Datum=Fehlerhaft_Datum.x,Fehlerhaft_Fahrleistung=Fehlerhaft_Fahrleistung.x,Produktionsdatum=Produktionsdatum.x)
+Einzelteil_T23<-Einzelteil_T23[!is.na(Einzelteil_T23$ID_T23),]
+
+
+Einzelteil_T25<-read_csv("Data/Einzelteil/Einzelteil_T25.csv")%>% select(-X1, -X1_1)%>% rename(Produktionsdatum_Origin=Produktionsdatum_Origin_01011970)
+
+Einzelteil_T26<-read_csv2("Data/Einzelteil/Einzelteil_T26.csv")%>% select(-X1, -X1_1)%>% rename(Produktionsdatum_Origin=Produktionsdatum_Origin_01011970)
+
+Einzelteil_T30<-read_csv("Data/Einzelteil/Einzelteil_T30.csv")%>% select(3,5,6,7,8,9,4) %>% rename(ID_T30=ID_T30.x,Herstellernummer=Herstellernummer.x,Werksnummer=Werksnummer.x,Fehlerhaft=Fehlerhaft.x,Fehlerhaft_Datum=Fehlerhaft_Datum.x,Fehlerhaft_Fahrleistung=Fehlerhaft_Fahrleistung.x,Produktionsdatum=Produktionsdatum.x)
+Einzelteil_T30<-Einzelteil_T30[!is.na(Einzelteil_T30$ID_T30),]
+
+
+Einzelteil_T32<-read_csv2("Data/Einzelteil/Einzelteil_T32.csv")%>% select(-X1, -X1_1)%>% select(1,3,4,5,6,7,2) %>% rename(ID_T32=ID_T32.x,Herstellernummer=Herstellernummer.x,Werksnummer=Werksnummer.x,Fehlerhaft=Fehlerhaft.x,Fehlerhaft_Datum=Fehlerhaft_Datum.x,Fehlerhaft_Fahrleistung=Fehlerhaft_Fahrleistung.x,Produktionsdatum=Produktionsdatum.x)
+Einzelteil_T32<-Einzelteil_T23[!is.na(Einzelteil_T32$ID_T32),]
+
+
+Einzelteil_T33<-read_csv("Data/Einzelteil/Einzelteil_T33.csv")%>% select(-X1, -X1_1)%>% rename(Produktionsdatum_Origin=Produktionsdatum_Origin_01011970)
+
+
+Einzelteil_T37<-read_csv("Data/Einzelteil/Einzelteil_T37.csv")%>% select(-X1, -X1_1)%>% rename(Produktionsdatum_Origin=Produktionsdatum_Origin_01011970)
+
+Einzelteil_T38<-read_csv("Data/Einzelteil/Einzelteil_T38.csv")%>% select(-X1, -X1_1)%>% select(1,3,4,5,6,7,2)%>% rename(ID_T38=ID_T38.x,Herstellernummer=Herstellernummer.x,Werksnummer=Werksnummer.x,Fehlerhaft=Fehlerhaft.x,Fehlerhaft_Datum=Fehlerhaft_Datum.x,Fehlerhaft_Fahrleistung=Fehlerhaft_Fahrleistung.x,Produktionsdatum=Produktionsdatum.x)
+Einzelteil_T38<-Einzelteil_T38[!is.na(Einzelteil_T38$ID_T38),]
+
+
+Einzelteil_T40<-read_csv2("Data/Einzelteil/Einzelteil_T40.csv")%>% select(-X1, -X1_1)%>% rename(Produktionsdatum_Origin=Produktionsdatum_Origin_01011970)
+  
+
+Einzelteil_T39<-read_file('Data/Einzelteil/Einzelteil_T39.txt') %>% str_replace_all(pattern = '"',replacement = "")%>% str_split(pattern='\a') %>% T36 <-  %>% separate(col=1,sep = "\\\\",into=c('X','X1','ID_T39','Produktionsdatum','Herstellernummer','Werksnummer','Fehlerhaft','Fehlerhaft_Datum','Fehlerhaft_Fahrleistung')) %>% select(3:9)
+Einzelteil_T39<-Einzelteil_T39[-1,]
+Einzelteil_T39[,c(3,4,5,7)]<-sapply(Einzelteil_T39[,c(3,4,5,7)],as.numeric)
+Einzelteil_T39$Fehlerhaft_Datum<-as.Date(Einzelteil_T39$Fehlerhaft_Datum,format = "%Y-%m-%d")
+Einzelteil_T39$Produktionsdatum<-as.Date(Einzelteil_T39$Produktionsdatum,format = "%Y-%m-%d")
+Einzelteil_T39<-Einzelteil_T39[!is.na(Einzelteil_T39$Produktionsdatum),]
+
+
+Einzelteil_T36<-read_file('Data/Einzelteil/Einzelteil_T36.txt')
+Einzelteil_T36<-str_split(Einzelteil_T36,pattern="\"\\s\"[0-9]+\"")
+Einzelteil_T36 <- data.frame(Einzelteil_T36,stringsAsFactors=F)
+Einzelteil_T36<-separate(Einzelteil_T36,col=1,sep = "  ",into=c("X1","X2","ID_T36","Herstellernummer","Werksnummer","Fehlerhaft","Fehlerhaft_Datum","Fehlerhaft_Fahrleistung"  ,"Produktionsdatum_Origin","Origin"))
+Einzelteil_T36<-select(Einzelteil_T36,3:10)
+Einzelteil_T36<-Einzelteil_T36[-1,]
+Einzelteil_T36$Herstellernummer <- str_remove_all(Einzelteil_T36$Herstellernummer,"\"")
+Einzelteil_T36$Werksnummer <- str_remove_all(Einzelteil_T36$Werksnummer,"\"")
+Einzelteil_T36$Origin <- str_remove_all(Einzelteil_T36$Origin,"\"")
+Einzelteil_T36$ID_T36 <- str_remove_all(Einzelteil_T36$ID_T36,"\"")
+Einzelteil_T36$Fehlerhaft_Datum<-as.Date(Einzelteil_T36$Fehlerhaft_Datum,format = "%Y-%m-%d")
+Einzelteil_T36[,c(2,3,4,6,7)]<-sapply(Einzelteil_T36[,c(2,3,4,6,7)],as.numeric)
+
+
+Einzelteil_T34<-read_file('Data/Einzelteil/Einzelteil_T34.txt')
+Einzelteil_T34<-str_split(Einzelteil_T34,pattern="\"\"[0-9]+\"")
+Einzelteil_T34 <- data.frame(Einzelteil_T34)
+Einzelteil_T34<-separate(Einzelteil_T34,col=1,sep = " | | ",into=c("X1.","X2.","ID_T36.","Herstellernummer.","Werksnummer.","Fehlerhaft.","Fehlerhaft_Datum.","Fehlerhaft_Fahrleistung."  ,"Produktionsdatum_Origin.","Origin.","X1","X2","ID_T36","Herstellernummer","Werksnummer","Fehlerhaft","Fehlerhaft_Datum","Fehlerhaft_Fahrleistung"  ,"Produktionsdatum_Origin","Origin","X1..","X2..","ID_T36..","Herstellernummer..","Werksnummer..","Fehlerhaft..","Fehlerhaft_Datum..","Fehlerhaft_Fahrleistung.."  ,"Produktionsdatum_Origin..","Origin..","X1...","X2...","ID_T36...","Herstellernummer...","Werksnummer...","Fehlerhaft..."))
+Einzelteil_T34<-select(Einzelteil_T34,c(7,10,13,16,19,22,25,28))
+Einzelteil_T34<-Einzelteil_T34[-1,]
+Einzelteil_T34<-Einzelteil_T34 %>% rename(ID_T34=Fehlerhaft_Datum.,Herstellernummer=Origin.,Werksnummer=ID_T36,Fehlerhaft=Fehlerhaft,Fehlerhaft_Datum=Produktionsdatum_Origin,Fehlerhaft_Fahrleistung=X2..,Produktionsdatum_Origin=Werksnummer..,Origin=Fehlerhaft_Fahrleistung..)
+Einzelteil_T34$Herstellernummer <- str_remove_all(Einzelteil_T34$Herstellernummer,"\"")
+Einzelteil_T34$ID_T34 <- str_remove_all(Einzelteil_T34$ID_T34,"\"")
+Einzelteil_T34$Werksnummer <- str_remove_all(Einzelteil_T34$Werksnummer,"\"")
+Einzelteil_T34$Origin <- str_remove_all(Einzelteil_T34$Origin,"\"")
+Einzelteil_T34[,c(2,3,4,6,7)]<-sapply(Einzelteil_T34[,c(2,3,4,6,7)],as.numeric)
+Einzelteil_T34$Fehlerhaft_Datum<-as.Date(Einzelteil_T34$Fehlerhaft_Datum,format = "%Y-%m-%d")
+
+
+Einzelteil_T31<-read_file('Data/Einzelteil/Einzelteil_T31.txt')
+Einzelteil_T31<-str_split(Einzelteil_T31,pattern="\b")
+Einzelteil_T31 <- data.frame(Einzelteil_T31)
+Einzelteil_T31<-separate(Einzelteil_T31,col=1,sep = "  ",into=c("X1","X2","ID_T31","Herstellernummer","Werksnummer","Fehlerhaft","Fehlerhaft_Datum","Fehlerhaft_Fahrleistung"  ,"Produktionsdatum_Origin","Origin"))
+Einzelteil_T31<-Einzelteil_T31[-1,]
+Einzelteil_T31<-select(Einzelteil_T31,3:10)
+Einzelteil_T31$Herstellernummer <- str_remove_all(Einzelteil_T31$Herstellernummer,"\"")
+Einzelteil_T31$Werksnummer <- str_remove_all(Einzelteil_T31$Werksnummer,"\"")
+Einzelteil_T31$Origin <- str_remove_all(Einzelteil_T31$Origin,"\"")
+Einzelteil_T31$ID_T31 <- str_remove_all(Einzelteil_T31$ID_T31,"\"")
+Einzelteil_T31$Fehlerhaft_Datum<-as.Date(Einzelteil_T31$Fehlerhaft_Datum,format = "%Y-%m-%d")
+Einzelteil_T31[,c(2,3,4,6,7)]<-sapply(Einzelteil_T31[,c(2,3,4,6,7)],as.numeric)
+Einzelteil_T31<-Einzelteil_T31[!is.na(Einzelteil_T31$ID_T31),]
+
+
+Einzelteil_T27<-read_file('Data/Einzelteil/Einzelteil_T27.txt')
+Einzelteil_T27<-str_split(Einzelteil_T27,pattern="\a")
+Einzelteil_T27 <- data.frame(Einzelteil_T27)
+Einzelteil_T27<-separate(Einzelteil_T27,col=1,sep = " | | ",into=c("X1.","X2.","ID_T31.","Herstellernummer.","Werksnummer.","Fehlerhaft.","Fehlerhaft_Datum.","Fehlerhaft_Fahrleistung.","X1","X2","ID_T31","Herstellernummer","Werksnummer","Fehlerhaft","Fehlerhaft_Datum","Fehlerhaft_Fahrleistung"  ,"Produktionsdatum_Origin","Origin","Origin1","Origin2","Origin3","Origin4","Origin5","Origin6","Origin7","Origin8","Origin9","Origin10","Origin11"))
+Einzelteil_T27 <- select(Einzelteil_T27,7,10,13,16,19,22,25,28)
+Einzelteil_T27 <- Einzelteil_T27[-1,]
+Einzelteil_T27<-Einzelteil_T27[!is.na(Einzelteil_T27$Fehlerhaft_Datum.),]
+Einzelteil_T27<-rename(Einzelteil_T27,ID_T27=Fehlerhaft_Datum.,Herstellernummer=X2,Fehlerhaft=Fehlerhaft_Fahrleistung,Fehlerhaft_Datum=Origin1,Fehlerhaft_Fahrleistung=Origin4,Produktionsdatum_Origin=Origin7,origin=Origin10)
+Einzelteil_T27$Herstellernummer <- str_remove_all(Einzelteil_T27$Herstellernummer,"\"")
+Einzelteil_T27$ID_T27 <- str_remove_all(Einzelteil_T27$ID_T27,"\"")
+Einzelteil_T27$origin <- str_remove_all(Einzelteil_T27$origin,"\"")
+Einzelteil_T27$Werksnummer <- str_remove_all(Einzelteil_T27$Werksnummer,"\"")
+Einzelteil_T27[,c(2,3,4,6,7)]<-sapply(Einzelteil_T27[,c(2,3,4,6,7)],as.numeric)
+Einzelteil_T27$Fehlerhaft_Datum<-as.Date(Einzelteil_T27$Fehlerhaft_Datum,format = "%Y-%m-%d")
+
+
+
+Einzelteil_T24<-read_file('Data/Einzelteil/Einzelteil_T24.txt')
+Einzelteil_T24<-str_split(Einzelteil_T24,pattern="\f")
+Einzelteil_T24 <- data.frame(Einzelteil_T24)
+Einzelteil_T24<-separate(Einzelteil_T24,col=1,sep = "  ",into=c("X1.","X2.","ID_T24","Produktionsdatum","Herstellernummer","Werksnummer","Fehlerhaft","Fehlerhaft_Datum","Fehlerhaft_Fahrleistung"))
+Einzelteil_T24 <- select(Einzelteil_T24,3:9)
+Einzelteil_T24$Herstellernummer <- str_remove_all(Einzelteil_T24$Herstellernummer,"\"")
+Einzelteil_T24$ID_T24 <- str_remove_all(Einzelteil_T24$ID_T24,"\"")
+Einzelteil_T24$Werksnummer <- str_remove_all(Einzelteil_T24$Werksnummer,"\"")
+Einzelteil_T24 <- Einzelteil_T24[-1,]
+Einzelteil_T24<-select(Einzelteil_T24,1,3,4,5,6,7,2)
+Einzelteil_T24<-Einzelteil_T24[!is.na(Einzelteil_T24$Herstellernummer),]
+Einzelteil_T24[,c(2,3,4,6)]<-sapply(Einzelteil_T24[,c(2,3,4,6)],as.numeric)
+Einzelteil_T24$Fehlerhaft_Datum<-as.Date(Einzelteil_T24$Fehlerhaft_Datum,format = "%Y-%m-%d")
+Einzelteil_T24$Produktionsdatum<-as.Date(Einzelteil_T24$Produktionsdatum,format = "%Y-%m-%d")
+
+
+Einzelteil_T22<-read_file('Data/Einzelteil/Einzelteil_T22.txt')
+Einzelteil_T22<-str_split(Einzelteil_T22,pattern="\"[0-9]+\"\t[0-9]+\t\"")
+Einzelteil_T22 <- data.frame(Einzelteil_T22)
+Einzelteil_T22<-separate(Einzelteil_T22,col=1,sep = "\t",into=c("ID_T22","Produktionsdatum","Herstellernummer","Werksnummer","Fehlerhaft","Fehlerhaft_Datum","Fehlerhaft_Fahrleistung"))
+Einzelteil_T22<- Einzelteil_T22[-1,]
+Einzelteil_T22<-select(Einzelteil_T22,1,3,4,5,6,7,2)
+Einzelteil_T22$Herstellernummer <- str_remove_all(Einzelteil_T22$Herstellernummer,"\"")
+Einzelteil_T22$ID_T22 <- str_remove_all(Einzelteil_T22$ID_T22,"\"")
+Einzelteil_T22$Fehlerhaft_Datum<-as.Date(Einzelteil_T22$Fehlerhaft_Datum,format = "%Y-%m-%d")
+Einzelteil_T22$Produktionsdatum<-as.Date(Einzelteil_T22$Produktionsdatum,format = "%Y-%m-%d")
+Einzelteil_T22[,c(2,3,4,6)]<-sapply(Einzelteil_T22[,c(2,3,4,6)],as.numeric)
+
+
+
+
+Einzelteil_T35<-read_file('Data/Einzelteil/Einzelteil_T35.txt')
+Einzelteil_T35<-str_split(Einzelteil_T35,pattern="\\\"[0-9]+\"\\\\[0-9]+\\\\\\\"")
+Einzelteil_T35 <- data.frame(Einzelteil_T35)
+Einzelteil_T35<-separate(Einzelteil_T35,col=1,sep = "\\\\",into=c("ID_T35","Produktionsdatum","Herstellernummer","Werksnummer","Fehlerhaft","Fehlerhaft_Datum","Fehlerhaft_Fahrleistung"))
+Einzelteil_T35 <- Einzelteil_T35[-1,]
+Einzelteil_T35$Herstellernummer <- str_remove_all(Einzelteil_T35$Herstellernummer,"\"")
+Einzelteil_T35$ID_T35 <- str_remove_all(Einzelteil_T35$ID_T35,"\"")
+Einzelteil_T35$Fehlerhaft_Datum<-as.Date(Einzelteil_T35$Fehlerhaft_Datum,format = "%Y-%m-%d")
+Einzelteil_T35$Produktionsdatum<-as.Date(Einzelteil_T35$Produktionsdatum,format = "%Y-%m-%d")
+Einzelteil_T35<-select(Einzelteil_T35,1,3,4,5,6,7,2)
+Einzelteil_T35[,c(2,3,4,6)]<-sapply(Einzelteil_T35[,c(2,3,4,6)],as.numeric)
 ```
 
-Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
+
+
+
