--- a/Case_Study_Group_14.Rmd
+++ b/Case_Study_Group_14.Rmd
@@ -9,13 +9,69 @@ knitr::opts_chunk$set(echo = TRUE)
 
 ## R Markdown
 
-This is an R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <http://rmarkdown.rstudio.com>.
 
-When you click the **Knit** button a document will be generated that includes both content as well as the output of any embedded R code chunks within the document. You can embed an R code chunk like this:
+```{r, echo = FALSE}
 
-```{r cars}
-summary(cars)
+library(tidyverse)
+
+library(knitr)
+
+library(readxl)
+
+library(data.table)
+
+library(tidyr)
 ```
+
+##import data for components
+```{r}
+
+```{r}
+library(readr)
+```
+
+
+```{r}
+Einzelteil4 <- fread("~/Desktop/IDA 2019/Shared/Data/Einzelteil/Einzelteil_T04.csv", header=TRUE, sep=";", stringsAsFactors = FALSE)
+
+Einzelteil5 <- fread("~/Desktop/IDA 2019/Shared/Data/Einzelteil/Einzelteil_T05.csv", header=TRUE, sep=",", stringsAsFactors = FALSE)
+
+Einzelteil6 <- fread("~/Desktop/IDA 2019/Shared/Data/Einzelteil/Einzelteil_T06.csv", header=TRUE, stringsAsFactors = FALSE)
+
+Einzelteil8 <- fread("~/Desktop/IDA 2019/Shared/Data/Einzelteil/Einzelteil_T08.csv", header=TRUE, stringsAsFactors = FALSE)
+
+Einzelteil10 <- fread("~/Desktop/IDA 2019/Shared/Data/Einzelteil/Einzelteil_T10.csv", header=TRUE, sep=";", stringsAsFactors = FALSE)
+
+Einzelteil12 <- fread("~/Desktop/IDA 2019/Shared/Data/Einzelteil/Einzelteil_T12.csv", header=TRUE, sep = ";", stringsAsFactors = FALSE)
+
+Einzelteil13 <- fread("~/Desktop/IDA 2019/Shared/Data/Einzelteil/Einzelteil_T13.csv", header=TRUE, sep=";", stringsAsFactors = FALSE)
+
+Einzelteil14 <- fread("~/Desktop/IDA 2019/Shared/Data/Einzelteil/Einzelteil_T14.csv", header=TRUE, sep=";", stringsAsFactors = FALSE)
+
+Einzelteil15 <- fread("~/Desktop/IDA 2019/Shared/Data/Einzelteil/Einzelteil_T15.csv", header=TRUE, sep=";", stringsAsFactors = FALSE)
+
+Einzelteil17 <- fread("~/Desktop/IDA 2019/Shared/Data/Einzelteil/Einzelteil_T17.csv", header=TRUE, sep=";", stringsAsFactors = FALSE)
+
+Einzelteil18 <- fread("~/Desktop/IDA 2019/Shared/Data/Einzelteil/Einzelteil_T18.csv", header=TRUE, sep=";", stringsAsFactors = FALSE)
+
+Einzelteil19 <- fread("~/Desktop/IDA 2019/Shared/Data/Einzelteil/Einzelteil_T19.csv", header=TRUE, sep=",", stringsAsFactors = FALSE)
+```
+
+
+```{r}
+Einzelteil9<-read_file("~/Desktop/IDA 2019/Shared/Data/Einzelteil/Einzelteil_T09.txt")
+Einzelteil9<-str_split(Einzelteil9,pattern="\\\"[0-9]+\"\\\\[0-9]+\\\\\\\"")
+Einzelteil9 <- data.frame(Einzelteil9)
+Einzelteil9<-separate(Einzelteil9,col=1,sep = "\\\\",into=c("ID_T35","Produktionsdatum","Herstellernummer","Werksnummer","Fehlerhaft","Fehlerhaft_Datum","Fehlerhaft_Fahrleistung"))
+Einzelteil9 <- Einzelteil9[-1,]
+Einzelteil9$Herstellernummer <- str_remove_all(Einzelteil9$Herstellernummer,"\"")
+Einzelteil9$ID_T35 <- str_remove_all(Einzelteil9$ID_T35,"\"")
+Einzelteil9$Fehlerhaft_Datum<-as.Date(Einzelteil9$Fehlerhaft_Datum,format = "%Y-%m-%d")
+Einzelteil9$Produktionsdatum<-as.Date(Einzelteil9$Produktionsdatum,format = "%Y-%m-%d")
+Einzelteil9<-select(Einzelteil9,1,3,4,5,6,7,2)
+Einzelteil9[,c(2,3,4,6)]<-sapply(Einzelteil9[,c(2,3,4,6)],as.numeric)
+```
+
 
 ## Including Plots
 
