--- a/Case_Study_Group_14.Rmd
+++ b/Case_Study_Group_14.Rmd
@@ -72,6 +72,19 @@ Einzelteil9<-select(Einzelteil9,1,3,4,5,6,7,2)
 Einzelteil9[,c(2,3,4,6)]<-sapply(Einzelteil9[,c(2,3,4,6)],as.numeric)
 ```
 
+```{r}
+Einzelteil7<-read_file("F:/Downloads/Data/Einzelteil/Einzelteil_T07.txt")
+Einzelteil7<-str_split(Einzelteil7,pattern="\"[0-9]+\"\t[0-9]+\t\"")
+Einzelteil7 <- data.frame(Einzelteil7)
+Einzelteil7<-separate(Einzelteil7,col=1,sep = "\t",into=c("ID_T07","Produktionsdatum","Herstellernummer","Werksnummer","Fehlerhaft","Fehlerhaft_Datum","Fehlerhaft_Fahrleistung"))
+Einzelteil7<- Einzelteil7[-1,]
+Einzelteil7<-select(Einzelteil7,1,3,4,5,6,7,2)
+Einzelteil7$Herstellernummer <- str_remove_all(Einzelteil7$Herstellernummer,"\"")
+Einzelteil7$ID_T07 <- str_remove_all(Einzelteil7$ID_T07,"\"")
+Einzelteil7$Fehlerhaft_Datum<-as.Date(Einzelteil7$Fehlerhaft_Datum,format = "%Y-%m-%d")
+Einzelteil7$Produktionsdatum<-as.Date(Einzelteil7$Produktionsdatum,format = "%Y-%m-%d")
+Einzelteil7[,c(2,3,4,6)]<-sapply(Einzelteil7[,c(2,3,4,6)],as.numeric)
+```
 
 ## Including Plots
 
