--- a/Case_Study_Group_14.Rmd
+++ b/Case_Study_Group_14.Rmd
@@ -49,14 +49,8 @@ Einzelteil4 <- Einzelteil4[,-(9:10),drop=FALSE]
 ```
 
 ```{r}
-Einzelteil5 <- fread("~/Desktop/IDA 2019/Shared/Data/Einzelteil/Einzelteil_T05.csv", header=TRUE, sep=",", stringsAsFactors = FALSE)
-Einzelteil5 <- unite(Einzelteil5, Produktionsdatum,Produktionsdatum.x, Produktionsdatum.y, sep = "_", remove = TRUE)
-Einzelteil5 <- unite(Einzelteil5, Herstellernummer,Herstellernummer.x, Herstellernummer.y, sep = "_", remove = TRUE)
-Einzelteil5 <- unite(Einzelteil5, Werksnummer,Werksnummer.x, Werksnummer.y, sep = "_", remove = TRUE)
-Einzelteil5 <- unite(Einzelteil5, Fehlerhaft,Fehlerhaft.x, Fehlerhaft.y, sep = "_", remove = TRUE)
-Einzelteil5 <- unite(Einzelteil5, Fehlerhaft_Datum,Fehlerhaft_Datum.x, Fehlerhaft_Datum.y, sep = "_", remove = TRUE)
-Einzelteil5 <- unite(Einzelteil5, Fehlerhaft_Fahrleistung,Fehlerhaft_Fahrleistung.x, Fehlerhaft_Fahrleistung.y, sep = "_", remove = TRUE)
-Einzelteil5 <- unite(Einzelteil5, ID_T05,ID_T05.x, ID_T05.y, sep = "_", remove = TRUE)
+Einzelteil5<-read_csv("~/Desktop/IDA 2019/Shared/Data/Einzelteil/Einzelteil_T05.csv)%>% select(-X1, -X1_1)%>% select(1,3,4,5,6,7,2)%>% rename(ID_T05=ID_T05.x,Herstellernummer=Herstellernummer.x,Werksnummer=Werksnummer.x,Fehlerhaft=Fehlerhaft.x,Fehlerhaft_Datum=Fehlerhaft_Datum.x,Fehlerhaft_Fahrleistung=Fehlerhaft_Fahrleistung.x,Produktionsdatum=Produktionsdatum.x)
+Einzelteil5<-Einzelteil5[!is.na(Einzelteil5$ID_T05),]
 ```
 
 ```{r}
