--- a/Case_Study_Group_14.Rmd
+++ b/Case_Study_Group_14.Rmd
@@ -33,11 +33,6 @@ library(readr)
 
 
 
-```{r}
-
-Einzelteil17 <- fread("~/Desktop/IDA 2019/Shared/Data/Einzelteil/Einzelteil_T17.csv", header=TRUE, sep=";", stringsAsFactors = FALSE)
-
-```
 
 
 ```{r}
@@ -96,6 +91,17 @@ Einzelteil14$Fehlerhaft_Datum<-as.Date(Einzelteil14$Fehlerhaft_Datum,format = "%
 Einzelteil14$origin<-as.Date(Einzelteil14$origin,format = "%d-%m-%Y")
 Einzelteil14 <- transform(Einzelteil14, Produktionsdatum = Einzelteil14$Produktionsdatum_Origin_01011970 + Einzelteil14$origin)
 Einzelteil14 <- Einzelteil14[,-(9:10),drop=FALSE]
+```
+
+```{r}
+Einzelteil15<-read_csv2("~/Desktop/IDA 2019/Shared/Data/Einzelteil/Einzelteil_T15.csv")%>% select(-X1, -X1_1)%>% select(1,3,4,5,6,7,2) %>% rename(ID_T15=ID_T15.x,Herstellernummer=Herstellernummer.x,Werksnummer=Werksnummer.x,Fehlerhaft=Fehlerhaft.x,Fehlerhaft_Datum=Fehlerhaft_Datum.x,Fehlerhaft_Fahrleistung=Fehlerhaft_Fahrleistung.x,Produktionsdatum=Produktionsdatum.x)
+Einzelteil15
+```
+
+```{r}
+
+Einzelteil17<-read_csv2("~/Desktop/IDA 2019/Shared/Data/Einzelteil/Einzelteil_T17.csv")%>% select(-X1, -X1_1)%>% select(1,3,4,5,6,7,2) %>% rename(ID_T17=ID_T17.x,Herstellernummer=Herstellernummer.x,Werksnummer=Werksnummer.x,Fehlerhaft=Fehlerhaft.x,Fehlerhaft_Datum=Fehlerhaft_Datum.x,Fehlerhaft_Fahrleistung=Fehlerhaft_Fahrleistung.x,Produktionsdatum=Produktionsdatum.x)
+Einzelteil17<-Einzelteil_T23[!is.na(Einzelteil17$ID_T17),]
 ```
 
 ```{r}
